Fix overlap in styling

--- a/app/assets/stylesheets/kitchen_profile.scss
+++ b/app/assets/stylesheets/kitchen_profile.scss
@@ -45,8 +45,9 @@
   display: inline-block;
   width: 57%;
   height: 22%;
-  padding-top: 3%;
-  padding-left: 3%;
+  padding-top: 2%;
+  padding-left: 2%;
+  padding-bottom: 1%;
 }
 
 .kitchen-profile-upper-right {
@@ -54,7 +55,7 @@
   display: inline-block;
   width: 35%;
   height: 22%;
-  padding-top: 3%;
+  padding-top: 2%;
   padding-right: 2%;
 }
 
